[metadata]
name = mumbai
version = file: VERSION
description = Bam index database for position-based lookup on multiple bams
long_description = file: README.md
author = Conrad Leonard
author_email = conrad.leonard@qimrberghofer.edu.au
license = MIT License
classifiers:
    Programming Language :: Python :: 3.9
    License :: MIT License

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
